scripts/nullness/annotator/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8.txt
../annotator/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/server/EncodeDecodeTask.java:56: error: [argument] incompatible argument for parameter bytes of String constructor.
                    out.write("Encoded code: " + new String(code) + "\r\n");
                                                            ^
  found   : @Initialized @NonNull byte @Initialized @Nullable []
  required: @Initialized @NonNull byte @Initialized @NonNull []
../annotator/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/server/PoolThreadTaskExecutor2.java:20: error: [method.invocation] call to buildThread() not allowed on the given receiver.
            threads[i] = buildThread();
                                    ^
  found   : @UnderInitialization(server.PoolThreadTaskExecutor2.class) @NonNull PoolThreadTaskExecutor2
  required: @Initialized @NonNull PoolThreadTaskExecutor2
../annotator/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/server/TaskExecutorProvider.java:41: error: [return] incompatible types in return.
            return s;
                   ^
  type of expression: @Initialized @Nullable String
  method return type: @Initialized @NonNull String
../annotator/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/Value.java:11: error: [assignment] incompatible types in assignment.
        this.value = val;
                     ^
  found   : T extends @Initialized @Nullable Object
  required: T extends @Initialized @NonNull Object
../annotator/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/Value.java:14: error: [initialization.fields.uninitialized] the constructor does not initialize fields: value
    public Value() {
           ^
../annotator/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/visitor/ConsoleVisitor.java:17: error: [dereference.of.nullable] dereference of possibly-null reference list.get(i)
            stringBuilder.append(list.get(i).toString());
                                         ^
../annotator/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/visitor/ConsoleVisitor.java:21: error: [dereference.of.nullable] dereference of possibly-null reference list.get(list.size() - 1)
            stringBuilder.append(list.get(list.size() - 1).toString());
                                         ^
../annotator/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/visitor/ConsoleVisitor.java:56: error: [dereference.of.nullable] dereference of possibly-null reference constant.getValue()
        System.out.print(constant.getValue().toString() + " ");
                                          ^
../annotator/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/visitor/ConsoleVisitor.java:62: error: [dereference.of.nullable] dereference of possibly-null reference value.getValue()
        System.out.print(value.getValue().toString() + " ");
                                       ^
../annotator/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/SqlQueryBuilder.java:35: error: [argument] incompatible argument for parameter a of Arrays.asList.
        selectColumns = asList(columns);
                               ^
  found   : @Initialized @NonNull Column</*RAW*/> @Initialized @Nullable []
  required: @Initialized @NonNull Column</*RAW*/> @Initialized @NonNull []
../annotator/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/SqlQueryBuilder.java:41: error: [argument] incompatible argument for parameter a of Arrays.asList.
        fromTables = asList(tables);
                            ^
  found   : @Initialized @NonNull Table @Initialized @Nullable []
  required: @Initialized @NonNull Table @Initialized @NonNull []
../annotator/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/SqlQueryBuilder.java:53: error: [argument] incompatible argument for parameter a of Arrays.asList.
        orderByColumns = asList(columns);
                                ^
  found   : @Initialized @NonNull Column</*RAW*/> @Initialized @Nullable []
  required: @Initialized @NonNull Column</*RAW*/> @Initialized @NonNull []
../annotator/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/SqlQueryBuilder.java:59: error: [argument] incompatible argument for parameter a of Arrays.asList.
        groupByColumns = asList(columns);
                                ^
  found   : @Initialized @NonNull Column</*RAW*/> @Initialized @Nullable []
  required: @Initialized @NonNull Column</*RAW*/> @Initialized @NonNull []
../annotator/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/encoder/CipherEncoder.java:50: error: [argument] incompatible argument for parameter input of Cipher.doFinal.
            return new String(aes.doFinal(bytes));
                                          ^
  found   : @Initialized @NonNull byte @Initialized @Nullable []
  required: @Initialized @NonNull byte @Initialized @NonNull []
../annotator/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/encoder/CipherEncoderTest.java:23: error: [argument] incompatible argument for parameter expected of TestCase.assertEquals.
        assertEquals("Encode - Decode Test Pass", decode, new String(encode));
                                                  ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull String
../annotator/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/encoder/CipherEncoderTest.java:23: error: [argument] incompatible argument for parameter bytes of String constructor.
        assertEquals("Encode - Decode Test Pass", decode, new String(encode));
                                                                     ^
  found   : @Initialized @NonNull byte @Initialized @Nullable []
  required: @Initialized @NonNull byte @Initialized @NonNull []
../annotator/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/encoder/MsgEncoderProvider.java:41: error: [return] incompatible types in return.
            return s;
                   ^
  type of expression: @Initialized @Nullable String
  method return type: @Initialized @NonNull String
Note: ../annotator/url58b12a0c74_tatianaslod_daooTP_tgz-pJ8-tp1_MainTp1J8/src/tp1/visitor/JsonVisitor.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
17 errors
